# CLUSEK-TT

./: .gitmodules  README.md  l10n.yaml  pubspec.yaml  regenerate_all.bat
lib/: main.dart
lib/cubit/core/: core_cubit.dart  core_cubit.freezed.dart  core_state.dart
lib/cubit/cubit/: core_cubit.dart  core_cubit.freezed.dart  core_state.dart
lib/data/: compression_algorithms.dart  dds_flags.dart  tex_compress_flags.dart  tex_filter_flags.dart  wic_flags.dart
lib/extensions/: animation_controller_easing_extension.dart  integer_bitwise_operations_extension.dart  integer_bitwise_operations_extensions.dart  integer_to_bool.dart  integer_to_bool_extension.dart
lib/resources/: app_colors.dart
lib/services/: directx_tex_native_bridge_service.dart  directxtex_bridge_service.dart  locator.dart
lib/ui/other/: shadow_decoration.dart
lib/ui/pages/: compression_subpage.dart  files_subpage.dart  home_page.dart  input_subpage.dart  mipmaps_subpage.dart  output_subpage.dart  presets_subpage.dart
lib/ui/widgets/: separator.dart  (+8 more)
locale/: app_en.arb  app_pl.arb
test/: widget_test.dart
test/cubit/: core_cubit_test.dart  core_cubit_test.mocks.dart
test/extensions/: animation_controller_easing_extension_test.dart  animation_controller_easing_extension_test.mocks.dart  integer_bitwise_operations_extension_test.dart  integer_bitwise_operations_extensions_test.dart  integer_to_bool_extension_test.dart  integer_to_bool_test.dart
windows/: CMakeLists.txt
windows/directxtex_bridge/: .gitignore  CMakeLists.txt  bridge.cpp  library.cpp
windows/runner/: Runner.rc  main.cpp
(+2 files in other folders)
